# Symbiote-Evolving-NFT

./: .gitignore  LICENSE  README.md  colosseum_project.json
archive/aegis/: Cargo.toml  aegis_actions.csv  bot_trades.csv
archive/aegis/src/: main.rs
backend/: .env.example  README.md  package-lock.json  package.json  sample-jupiter-transaction.json  server.js
backend/idl/: symbiote_pet.json
backend/scripts/: smoke-test.mjs  validate-env.mjs
docs/: FILES_AND_DESCRIPTIONS.md  HACKATHON_READINESS.md  HACKATHON_RUNBOOK.md
frontend/: README.md  app.js  index.html  styles.css
scripts/: dev-up.sh  preflight.sh
symbiote-anchor/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
symbiote-anchor/programs/symbiote_pet/: Cargo.toml
symbiote-anchor/programs/symbiote_pet/src/: lib.rs
symbiote-anchor/scripts/: deploy-dev.sh
symbiote-anchor/tests/: symbiote_pet.ts
