[package]
name = "symbiote_pet"
version = "0.1.0"
description = "Symbiote Pet Dynamic Evolutionary NFT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "symbiote_pet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
spl-token = "6.0.0"
